package org.example;

public interface IPaymentProcessor {
    void processPayment(Object paymentDetails);
}