package org.example;
import java.util.Queue;
import java.util.LinkedList;


public class OrderManager implements IOrderManager {
    private IDataBaseManager dbManager;
    private Queue<Object> orderQueue;

    public OrderManager(IDataBaseManager dbManager) {
        this.dbManager = dbManager;
        this.orderQueue = new LinkedList<>();
    }

    @Override
    public void createOrder(Object orderDetails) {
        orderQueue.add(orderDetails);
        processOrderQueue();
    }

    @Override
    public void updateOrder(Object orderDetails) {
        // Implementación
    }

    @Override
    public void deleteOrder(String orderId) {
        // Implementación
    }

    private void processOrderQueue() {
        // Procesamiento asíncrono de la cola de pedidos
    }
}