package org.example;

public class PaymentProcessor implements IPaymentProcessor {
    @Override
    public void processPayment(Object paymentDetails) {
        // Implementación
    }
}